# Wiegotcha-esp32

./: .gitignore  CMakeLists.txt  ReadMe.md  log.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.node32s  sdkconfig.node32s.old  sdkconfig.old
main/: CMakeLists.txt  fs.cpp  http.cpp  idf_component.yml  main.cpp  wiegotcha.c  wiegotcha.h  wifi.cpp  wifi.hh
pio-tools/: merge_bins.py
src/: CMakeLists.txt  fs.cpp  fs.hh  http.cpp  http.hh  main.cpp  wiegotcha.c  wifi.cpp
src/data/: data.csv
